--- a/src/app/i18n/locales/en/contacts.json
+++ b/src/app/i18n/locales/en/contacts.json
@@ -1,8 +1,10 @@
 {
   "title": "Contacts",
-  "subTitle1":"prioritizing user experience,",
-  "subTitle2":"embracing diverse learning opportunities,",
-  "subTitle3":"ready to collaborate and grow together.",
-  "subTitle4":"A frontend developer, Seona Lee, who is..."
+  "subtitle1": "prioritizing user experience,",
+  "subtitle2": "embracing diverse learning opportunities,",
+  "subtitle3": "ready to collaborate and grow together.",
+  "subtitle4": "A frontend developer, Seona Lee, who is...",
+  "thankYou": "Thank you",
+  "forVisiting": "for visiting"
 }
 
