--- a/src/app/i18n/locales/en/home.json
+++ b/src/app/i18n/locales/en/home.json
@@ -1,5 +1,6 @@
 {
-  "title": "Hi there!",
-  "subtitle": "Main Page",
-  "to-Mango": "I love Mango"
+  "title": "SEONA LEE",
+  "introduction1": "A frontend developer who constantly strives and innovates\n to deliver <0>a better user experience.</0>",
+  "introduction2": "My enthusiasm lies in <0>user accessibility</0>,\n swiftly assimilating <1>cutting-edge technologies</1>\n and consistently embracing <1>diverse learning opportunities.</1>",
+  "guide": "Below are topics that have been collected and curated. (Only Korean services are supported.)"
 }
