refac: 설명 박스 및 LetterDomino 컴포넌트 공통모듈 및 custom hook으로 리팩토링 후 적용

--- a/src/app/i18n/locales/ko/home.json
+++ b/src/app/i18n/locales/ko/home.json
@@ -2,5 +2,5 @@
   "title": "프론트엔드 개발자 이선아입니다",
   "introduction1": "더 나은 사용자 경험을 위한 <0>도전의식</0>과\n <0>끈기있는 문제해결능력<0/>이 강점입니다.",
   "introduction2": "코드를 작성할 때 가장 중요하게 고려하는 부분은 <0>사용자의 접근성</0>이며\n <1><0>웹 사이트 성능 측정 등의 최적화</0>와 <0>웹 접근성</0>을 고려한 개발</1>을 하기 위한\n 많은 연구를 하고 있습니다.",
-  "guide": "아래는 개인적으로 관심있는 주제들 위주로 한땀 한땀 모으고 있습니다.\n (현재 한글 서비스만 지원 중입니다.)"
+  "guide": "🐱 아래는 개인적으로 관심있는 주제들 위주로\n 한땀 한땀 모으고 있습니다.\n <0>(현재 한글 서비스만 지원 중입니다.)</0>"
 }
