chore: contacts 설명 박스 데이터 텍스트 추가

--- a/src/app/i18n/locales/en/contacts.json
+++ b/src/app/i18n/locales/en/contacts.json
@@ -5,6 +5,7 @@
   "subtitle3": "ready to collaborate and grow together.",
   "subtitle4": "A frontend developer, Seona Lee, who is...",
   "thankYou": "Thank you",
-  "forVisiting": "for visiting"
+  "forVisiting": "for visiting",
+  "mobile-guide": "🐱 If you're on a mobile device,\n tilt it from side to side."
 }
 
