--- a/packages/core/src/app/i18n/locales/ko/home.json
+++ b/packages/core/src/app/i18n/locales/ko/home.json
@@ -1,6 +1,7 @@
 {
   "title": "프론트엔드 개발자 이선아입니다",
-  "introduction1": "더 나은 사용자 경험을 위한 <0>도전의식</0>과\n <0>끈기있는 문제해결능력<0/>이 강점입니다.",
-  "introduction2": "코드를 작성할 때 가장 중요하게 고려하는 부분은 <0>사용자의 접근성</0>이며\n <1><0>웹 사이트 성능 측정 등의 최적화</0>와 <0>웹 접근성</0>을 고려한 개발</1>을 하기 위한\n 많은 연구를 하고 있습니다.",
-  "guide": "🐱 아래는 개인적으로 관심있는 주제들 위주로\n 한땀 한땀 모으고 있습니다.\n <0>(현재 한글 서비스만 지원 중입니다.)</0>"
+  "introduction1": "더 나은 사용자 경험을 위한 <0>도전의식</0>과\n <0>끈기있는 문제해결능력</0>이 강점입니다.",
+  "introduction2": "코드를 작성할 때 가장 중요하게 고려하는 부분은 <0>사용자의 접근성</0>이며\n <1>웹 사이트 성능 측정 등의 최적화와 웹 접근성을 고려한 개발</1>을 하기 위한\n 많은 연구를 하고 있습니다.",
+  "guide": "🐱 아래는 <3>프론트엔드와 관련된 질문</3>에 대한\n 대답을 해 주는 챗봇입니다.\n <5>설명 보기</5>",
+  "hidedGuide": " <1>'키워드 + ?' 형식으로 질문해주세요!</1> \n( 예 - ㅇㅇㅇ? )\n <3>추천 입력어</3> : <0>'안녕하세요', '클로저?'</0>\n    * 총 대화는 하루에 100개까지 가능합니다."
 }
